# aigentflow

./: .gitignore  README.md  create_macro.py  main.py  pyproject.toml  requirements.txt  run_app.py  setup.py
.aigentflow/actions/: Generic_Agent.json  Hello_world.json  List_open_windows.json  Random_num.json  Run_In_LLM_Chat.json  git_commit_message.json
.aigentflow/prompts/: Improve_message.json  Translate_to_english.json
agents/: commit_message.py  navwins_agent.py  rain.py  random_number.py  run_in_llm_chat.py  smolagents_cli.py
agents/wms_agent/: wms_smolagents_cli.py
aigentflow/: __init__.py
aigentflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
macros/: auto_script.py  auto_script_mlcourse.py  auto_script_transfer_repo.py  create_macro.py  macro_template.py  screen_ocr.py
macros/saved_macros/: kk.json
modules/: action_manager.py  history_manager.py  prompt_manager.py
pppagent/: dialog.py  output_smolagent.txt  ppp_smolagent.py  pppagent.py
reflex_aigentflow/: .gitignore  rxconfig.py
reflex_aigentflow/reflex_aigentflow/: __init__.py  reflex_aigentflow.py  state.py  styles.py
reflex_aigentflow/reflex_aigentflow/components/: action_execution.py  action_form.py  action_list.py  history_display.py  prompt_execution.py  prompt_form.py  prompt_list.py
reflex_aigentflow/reflex_aigentflow/utils/: __init__.py
utils/: string_utils.py
